# rust-on-android

./: LICENCE  README.md  build-all.sh  build-apk.sh  build-libgmp.sh  build-librpn.sh
android/: .gitignore  build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/pl/svgames/blog/RustOnAndroid/: MainActivity.java  Result.java  RpnCalculator.java
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
rust/: Cargo.toml  rustfmt.toml
rust/src/: android.rs  lib.rs  main.rs
